--- a/estilos.css
+++ b/estilos.css
@@ -9,47 +9,54 @@ header {
   background-color: #1a1a1a;
   color: white;
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.menu {
+h1 {
+  color: white;
+  margin: 0;
+}
+
+.user-menu-container {
   position: relative;
   display: inline-block;
 }
 
-.menu-toggle {
+.user-menu-button {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 15px;
+  font-size: 16px;
+  border: none;
   cursor: pointer;
-  font-size: 18px;
-  user-select: none;
 }
 
-.menu-opciones {
+.user-dropdown-menu {
   display: none;
   position: absolute;
-  background-color: white;
-  min-width: 160px;
-  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+  background-color: #f9f9f9;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
   z-index: 1;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  flex-direction: column;
 }
 
-.menu-opciones li a {
-  color: black;
-  padding: 10px 16px;
-  display: block;
-  text-decoration: none;
+.user-dropdown-menu button {
+  padding: 12px;
+  width: 100%;
+  border: none;
+  background: none;
+  text-align: left;
+  cursor: pointer;
 }
 
-.menu-opciones li a:hover {
-  background-color: #f1f1f1;
+.user-menu-container:hover .user-dropdown-menu {
+  display: flex;
 }
 
-.menu:hover .menu-opciones {
-  display: block;
-}
-
-h1, h2, h3 {
+h2, h3 {
   color: #1a1a1a;
 }
 
